fixed overflow in project title section, and made font responsive across screen sizes for all components.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,7 @@
   background-color: var(--color-bg-);
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: linear-gradient(
     to bottom right,
     var(--color-primary),
