--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -44,8 +44,6 @@ body {
   margin: 2rem 0;
 }
 
-
-
 .h1title {
   font-size: 3rem; /* Responsive font size */
   color: var(--color-);
@@ -80,7 +78,6 @@ body {
   width: 100%;
   max-width: 1280px;
   margin-top: 3rem;
-  
 }
 
 .aboutTextContainer {
@@ -196,7 +193,8 @@ body {
     padding: 2rem 1rem; /* Adjust padding for smaller screens */
   }
 
-  .sectionTitle {
+  .sectionTitle,
+  h1 {
     font-size: 2.5rem; /* Adjust font size for smaller screens */
   }
 
@@ -223,7 +221,8 @@ body {
     width: 80%; /* Larger image for very small screens */
   }
 
-  .h1title {
+  .sectionTitle,
+  h1 {
     font-size: 2rem;
   }
 
