--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -62,12 +62,14 @@
 }
 
 /* Responsive adjustments */
-@media screen and (max-width: 830px) {
-  .links {
-    flex-direction: column; /* Stack link items vertically on smaller screens */
+@media screen and (max-width: 768px) {
+  .text h2 {
+    font-size: 2rem; /* Adjusted for responsive scaling */
   }
+}
 
-  .link a {
-    justify-content: center; /* Ensure text is centered inside the anchor */
+@media screen and (max-width: 830px) {
+  .text h2 {
+    font-size: 2rem; /* Adjusted for responsive scaling */
   }
 }
