--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -11,7 +11,7 @@
 }
 
 .title {
-  font-size: 30px;
+  font-size: 2rem;
   font-weight: 600;
   text-decoration: none;
   color: var(--color-secondary);
@@ -37,10 +37,15 @@
   text-decoration: none;
 }
 
-@media screen and (max-width: 830px) {
+@media screen and (max-width: 768px) {
   .navbar {
     flex-direction: column;
     align-items: flex-start;
+  }
+
+  .title {
+    font-size: 2rem;
+    font-weight: 600;
   }
 
   .menu {
@@ -73,5 +78,11 @@
     display: flex;
     z-index: 1;
     background-color: var(--color-primary);
+  }
+
+  @media screen and (max-width: 768px) {
+    .title {
+      font-size: 2rem;
+    }
   }
 }
