--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -4,7 +4,7 @@ body {
   font-family: var(--font-roboto);
   color: var(--color-bg);
   margin: 0;
-  overflow-x: hidden;
+  overflow-x: nopn;
 }
 
 .projectsSection {
@@ -12,7 +12,6 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 2rem;
-
 }
 
 .aboutHeader {
@@ -25,7 +24,6 @@ body {
   font-size: 3rem;
   color: var(--color-secondary);
 }
-
 
 .divider {
   border: none;
@@ -55,7 +53,10 @@ body {
 
 .projectsGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Creates a responsive grid */
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(300px, 1fr)
+  ); /* Creates a responsive grid */
   gap: 2rem; /* Space between the cards */
   width: 100%;
   max-width: 1280px; /* Maximum width of the grid */
@@ -102,7 +103,6 @@ body {
   gap: 10px;
 }
 
-
 .demoLink,
 .sourceLink {
   color: var(--color-primary);
@@ -131,9 +131,9 @@ body {
 }
 
 @media (max-width: 768px) {
-
   .projectsSection {
     padding: 2rem 1rem;
+    margin-top: 4rem;
   }
 
   .projectsTitle {
@@ -145,12 +145,26 @@ body {
   .projectsGrid {
     grid-template-columns: repeat(2, 1fr); /* Two columns for medium screens */
   }
-
-  
 }
 
 @media (max-width: 480px) {
   .projectsGrid {
     grid-template-columns: 1fr; /* One column for small screens */
+  }
+
+  .projectsSection {
+    margin-top: 10rem;
+  }
+
+  .projectsTitle {
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+  }
+
+  @media (max-width: 375px) {
+    .projectsSection {
+      margin-top: 20rem;
+    }
   }
 }
